--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,38 @@ repositories {
 }
 
 dependencies {
+    //jgit
+    implementation 'org.eclipse.jgit:org.eclipse.jgit:7.3.0.202506031305-r'
+    implementation 'org.eclipse.jgit:org.eclipse.jgit.ssh.jsch:7.3.0.202506031305-r'
+
+    // Azure SDK
+    implementation platform('com.azure:azure-sdk-bom:1.2.36')
+    implementation 'com.azure:azure-identity'
+    implementation 'com.azure.resourcemanager:azure-resourcemanager'
+    implementation 'com.azure.resourcemanager:azure-resourcemanager-compute'
+    implementation 'com.azure.resourcemanager:azure-resourcemanager-network'
+    implementation 'com.azure.resourcemanager:azure-resourcemanager-containerinstance'
+    implementation 'com.azure.resourcemanager:azure-resourcemanager-containerregistry'
+    implementation 'com.azure:azure-storage-blob'
+    implementation 'com.azure:azure-security-keyvault-secrets'
+
+    // AWS
+    implementation platform('software.amazon.awssdk:bom:2.22.0')
+    implementation 'software.amazon.awssdk:ec2'
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:ssm'
+
+    // Terraform 실행
+    implementation 'org.apache.commons:commons-exec:1.3'
+
+    // 유틸리티
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'commons-io:commons-io:2.13.0'
+
+    // Docker
+    implementation 'com.github.docker-java:docker-java-core:3.5.3'
+
+
 //    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
